Handle render days and hours

--- a/src/app/components/calendar/calendar-day/calendar-day.component.html
+++ b/src/app/components/calendar/calendar-day/calendar-day.component.html
@@ -1,4 +1,5 @@
 <div class="calendar-day">
+  <div class="calendar-day-name">{{dayName}}</div>
   <div
     *ngFor="let i of [].constructor(24)"
     class="calendar-hour">
