--- a/src/app/components/calendar/calendar-day/calendar-day.component.sass
+++ b/src/app/components/calendar/calendar-day/calendar-day.component.sass
@@ -1,4 +1,8 @@
-.calendar-hour
-  border-bottom: 1px solid #ccc
-  height: 20px
-  width: 30px
+.calendar-day
+  width: 200px
+  float: left
+
+  .calendar-hour, &-name
+    border-bottom: 1px solid #ccc
+    height: 50px
+
