--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,3 +1,3 @@
 <div class="calendar-component">
-  <calendar-day *ngFor="let day of days" />
+  <app-calendar-day *ngFor="let day of days" dayName="{{day}}"></app-calendar-day>
 </div>
