Added styles for calendar events

--- a/src/app/components/calendar/calendar-day/calendar-day.component.html
+++ b/src/app/components/calendar/calendar-day/calendar-day.component.html
@@ -1,8 +1,9 @@
 <div class="calendar-day">
   <div class="calendar-day-name">{{dayName}}</div>
   <div
-    *ngFor="let i of [].constructor(24)"
+    *ngFor="let i of [].constructor(24); let hour = index"
     class="calendar-hour">
-    hour
+    {{ hour }}:00
   </div>
+  <div class="calendar-event">This is a test</div>
 </div>
