Improved calendar event styles

--- a/src/app/components/calendar/calendar-event/calendar-event.component.sass
+++ b/src/app/components/calendar/calendar-event/calendar-event.component.sass
@@ -8,3 +8,10 @@
   color: #ffffff
   font-weight: bold
   left: 40px
+
+  p
+    font-size: 12px
+    margin: 5px 10px 2px 10px
+
+    &:first-child
+      margin-top: 10px
